--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 		body {
 			margin: 0;
 			padding: 0;
-			background-color: #F5E5D9;
+			background-color: #cecdcc;
 		}
 		canvas {
 			display: block;
